SECURITY: Remove hardcoded API keys and use environment variables

--- a/.gitignore
+++ b/.gitignore
@@ -26,9 +26,15 @@ yarn-error.log*
 
 # local env files
 .env*.local
+.env
+.env.production
 
 # vercel
 .vercel
+
+# API keys and secrets
+*.key
+secrets.json
 
 # typescript
 *.tsbuildinfo
