--- a/.env.example
+++ b/.env.example
@@ -1,234 +1,13 @@
-# =============================================================================
-# Environment Configuration Template
-# =============================================================================
-# Copy this file to .env.local for development or .env.production for production
-# Never commit actual environment files with real secrets to version control
+# Gemini API Configuration
+GEMINI_API_KEY=your_gemini_api_key_here
 
-# =============================================================================
-# Application Configuration
-# =============================================================================
-NODE_ENV=development
-PORT=3000
-HOST=0.0.0.0
+# Supabase Configuration
+NEXT_PUBLIC_SUPABASE_URL=your_supabase_url_here
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key_here
+SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key_here
 
 # Application URLs
-NEXTAUTH_URL=http://localhost:3000
-NEXT_PUBLIC_APP_URL=http://localhost:3000
+NEXT_PUBLIC_APP_URL=https://exam-generator.vercel.app
 
-# =============================================================================
-# Database Configuration
-# =============================================================================
-# PostgreSQL Database
-DATABASE_URL=postgresql://username:password@localhost:5432/gemini_ocr_dev
-DATABASE_POOL_MIN=2
-DATABASE_POOL_MAX=10
-
-# Redis Cache
-REDIS_URL=redis://localhost:6379
-REDIS_PASSWORD=
-REDIS_DB=0
-REDIS_MAX_RETRIES=3
-REDIS_RETRY_DELAY_MS=100
-
-# =============================================================================
-# Authentication & Security
-# =============================================================================
-# NextAuth.js Configuration
-NEXTAUTH_SECRET=your-super-secret-nextauth-secret-here
-JWT_SECRET=your-jwt-secret-key-here
-JWT_EXPIRES_IN=24h
-
-# Session Configuration
-SESSION_MAX_AGE=86400
-SESSION_UPDATE_AGE=3600
-
-# CORS Configuration
-CORS_ORIGIN=http://localhost:3000,http://localhost:3001
-
-# =============================================================================
-# Google AI / Gemini Configuration
-# =============================================================================
-# Google Gemini AI API Key
-# Get your API key from: https://aistudio.google.com/app/apikey
-GEMINI_API_KEY=your_gemini_api_key_here
-GEMINI_MODEL=gemini-1.5-pro
-GEMINI_MAX_TOKENS=8192
-GEMINI_TEMPERATURE=0.1
-GEMINI_TOP_P=0.8
-GEMINI_TOP_K=40
-
-# =============================================================================
-# File Upload & Storage
-# =============================================================================
-# Local file storage
-UPLOAD_MAX_SIZE=10485760
-UPLOAD_ALLOWED_TYPES=image/jpeg,image/png,image/webp,application/pdf
-UPLOAD_DIR=./uploads
-TEMP_DIR=./temp
-
-# Cloud Storage (optional)
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_REGION=us-east-1
-AWS_S3_BUCKET=
-CLOUDINARY_URL=
-CLOUDINARY_CLOUD_NAME=
-CLOUDINARY_API_KEY=
-CLOUDINARY_API_SECRET=
-
-# =============================================================================
-# OCR Configuration
-# =============================================================================
-OCR_CONFIDENCE_THRESHOLD=0.7
-OCR_MAX_RETRY_ATTEMPTS=3
-OCR_TIMEOUT_MS=30000
-OCR_BATCH_SIZE=5
-OCR_QUEUE_CONCURRENCY=3
-
-# =============================================================================
-# Rate Limiting
-# =============================================================================
-RATE_LIMIT_WINDOW_MS=900000
-RATE_LIMIT_MAX_REQUESTS=100
-RATE_LIMIT_SKIP_SUCCESSFUL_REQUESTS=false
-RATE_LIMIT_SKIP_FAILED_REQUESTS=false
-
-# =============================================================================
-# Monitoring & Observability
-# =============================================================================
-# Logging
-LOG_LEVEL=info
-LOG_FORMAT=json
-LOG_FILE_PATH=./logs/app.log
-LOG_MAX_FILES=5
-LOG_MAX_SIZE=10m
-
-# Health Checks
-HEALTH_CHECK_INTERVAL_MS=5000
-HEALTH_CHECK_TIMEOUT_MS=3000
-HEALTH_CHECK_GRACE_PERIOD_MS=10000
-
-# Metrics
-METRICS_ENABLED=true
-METRICS_PORT=9090
-METRICS_PATH=/metrics
-
-# Application Performance Monitoring
-APM_SERVICE_NAME=gemini-ocr-api
-APM_ENVIRONMENT=development
-ELASTIC_APM_SERVER_URL=
-ELASTIC_APM_SECRET_TOKEN=
-NEW_RELIC_LICENSE_KEY=
-DATADOG_API_KEY=
-
-# =============================================================================
-# Circuit Breaker Configuration
-# =============================================================================
-CIRCUIT_BREAKER_FAILURE_THRESHOLD=5
-CIRCUIT_BREAKER_RESET_TIMEOUT_MS=60000
-CIRCUIT_BREAKER_MONITOR_INTERVAL_MS=5000
-
-# =============================================================================
-# Cache Configuration
-# =============================================================================
-CACHE_TTL_DEFAULT_SECONDS=3600
-CACHE_TTL_OCR_RESULTS_SECONDS=86400
-CACHE_TTL_USER_SESSIONS_SECONDS=1800
-CACHE_MAX_MEMORY_MB=128
-CACHE_COMPRESSION_ENABLED=true
-
-# =============================================================================
-# Background Jobs & Queues
-# =============================================================================
-QUEUE_REDIS_URL=redis://localhost:6379/1
-QUEUE_DEFAULT_JOB_ATTEMPTS=3
-QUEUE_DEFAULT_JOB_DELAY_MS=0
-QUEUE_CONCURRENCY=5
-QUEUE_REMOVE_ON_COMPLETE=100
-QUEUE_REMOVE_ON_FAIL=50
-
-# =============================================================================
-# Email Configuration (optional)
-# =============================================================================
-SMTP_HOST=
-SMTP_PORT=587
-SMTP_SECURE=false
-SMTP_USER=
-SMTP_PASS=
-EMAIL_FROM=noreply@gemini-ocr.com
-
-# SendGrid
-SENDGRID_API_KEY=
-
-# =============================================================================
-# Analytics & Tracking (optional)
-# =============================================================================
-GOOGLE_ANALYTICS_ID=
-MIXPANEL_TOKEN=
-SEGMENT_WRITE_KEY=
-
-# =============================================================================
-# Feature Flags
-# =============================================================================
-FEATURE_BATCH_PROCESSING=true
-FEATURE_REAL_TIME_OCR=true
-FEATURE_PDF_PROCESSING=true
-FEATURE_ADVANCED_ANALYTICS=false
-FEATURE_API_VERSIONING=true
-
-# =============================================================================
-# Development Tools
-# =============================================================================
-# Development only - remove in production
-NEXT_PUBLIC_DEBUG_MODE=false
-WEBPACK_BUNDLE_ANALYZER=false
-TYPESCRIPT_STRICT_MODE=true
-
-# =============================================================================
-# Production-Specific Variables
-# =============================================================================
-# Uncomment and configure for production deployments
-
-# SSL/TLS Configuration
-# SSL_CERT_PATH=/etc/ssl/certs/server.crt
-# SSL_KEY_PATH=/etc/ssl/private/server.key
-# HTTPS_PORT=443
-
-# Load Balancer Configuration
-# TRUST_PROXY=true
-# PROXY_TIMEOUT_MS=30000
-
-# Security Headers
-# HELMET_ENABLED=true
-# CSP_ENABLED=true
-# HSTS_MAX_AGE=31536000
-
-# Kubernetes/Container Configuration
-# KUBERNETES_SERVICE_HOST=
-# KUBERNETES_SERVICE_PORT=
-# POD_NAME=
-# POD_NAMESPACE=
-# NODE_NAME=
-
-# =============================================================================
-# Environment-Specific Overrides
-# =============================================================================
-
-# Development Environment
-# NODE_ENV=development
-# LOG_LEVEL=debug
-# RATE_LIMIT_MAX_REQUESTS=1000
-
-# Staging Environment  
-# NODE_ENV=staging
-# LOG_LEVEL=info
-# RATE_LIMIT_MAX_REQUESTS=500
-# NEXTAUTH_URL=https://staging-api.gemini-ocr.com
-
-# Production Environment
-# NODE_ENV=production
-# LOG_LEVEL=warn
-# RATE_LIMIT_MAX_REQUESTS=100
-# NEXTAUTH_URL=https://api.gemini-ocr.com
-# METRICS_ENABLED=true
-# APM_ENVIRONMENT=production
+# Prompt logging (localhost only)
+ENABLE_PROMPT_LOGGING=true
