Migrate domain from exam-generator.vercel.app to examgenie.app
- Update hardcoded URLs in src/lib/config.ts to use NEXT_PUBLIC_APP_URL
- Update hardcoded URL in src/app/api/exam/[id]/submit/route.ts
- Update .env.example with new domain
- Update README.md production URLs (4 instances)
- Update PROJECT_OVERVIEW.md documentation (3 instances)
- Update API documentation in docs/api/mobile-exam-retrieval-endpoints.md

All code now uses process.env.NEXT_PUBLIC_APP_URL with examgenie.app fallback.
Old exam-generator.vercel.app domain will continue to work as alias.

--- a/.env.example
+++ b/.env.example
@@ -14,7 +14,7 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key_here
 SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key_here
 
 # Application URLs
-NEXT_PUBLIC_APP_URL=https://exam-generator.vercel.app
+NEXT_PUBLIC_APP_URL=https://examgenie.app
 
 # Prompt logging (localhost only)
 ENABLE_PROMPT_LOGGING=true
